# Phoenix

./: .gitignore  Cargo.toml  README.md
crates/vmm-boot/: Cargo.toml
crates/vmm-boot/src/: layout.rs  lib.rs  linux.rs  mptable.rs
crates/vmm-daemon/: Cargo.toml
crates/vmm-daemon/src/: lib.rs  main.rs
crates/vmm-daemon/src/control/: manager.rs  mod.rs  protocol.rs  server.rs
crates/vmm-daemon/src/vm/: boot.rs  exit.rs  framebuffer.rs  mod.rs  state.rs  tap.rs  vm.rs
crates/vmm-devices/: Cargo.toml
crates/vmm-devices/src/: bus.rs  device.rs  fb.rs  lib.rs  pci_stub.rs  rtc_cmos.rs  uart.rs
crates/vmm-devices/src/virtio/: block.rs  mmio.rs  mod.rs  net.rs  net_mmio.rs  queue.rs
crates/vmm-hypervisor/: Cargo.toml
crates/vmm-hypervisor/src/: lib.rs  traits.rs
crates/vmm-hypervisor/src/kvm/: memory.rs  mod.rs  vcpu_fd.rs  vm_fd.rs
frontend/src/: client.py  main.py
frontend/src/views/: main_window.py  serial_console.py  vm_display.py
