[workspace]
resolver = "2"
members = [
    "crates/vmm-daemon",
    "crates/vmm-hypervisor",
    "crates/vmm-devices",
    "crates/vmm-boot",
]

# Shared dependency versions live here so every crate stays in lockstep.
# Individual crates pull them in via `dep = { workspace = true }`.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Error handling (§1.1): thiserror in libs, anyhow only at the daemon boundary.
thiserror = "1.0"
anyhow = "1.0"

# Async runtime for the control plane only (§1.1). vCPU loop stays sync.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
    "signal",
] }

# Logging (§1.1).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Wire format (§3.3).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Low-level syscalls: memfd_create, SCM_RIGHTS, ioctl fallbacks.
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mman", "socket", "uio"] }

# KVM orchestration (rust-vmm). This is safe ioctl plumbing, NOT a device model
# or a QEMU wrapper: all device emulation lives in vmm-devices behind traits.
kvm-ioctls = "0.18"
kvm-bindings = "0.9"
vm-memory = { version = "0.14", features = ["backend-mmap"] }

# Internal crates.
vmm-hypervisor = { path = "crates/vmm-hypervisor" }
vmm-devices = { path = "crates/vmm-devices" }
vmm-boot = { path = "crates/vmm-boot" }

[profile.release]
lto = "thin"
codegen-units = 1
