[package]
name = "vmm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "The Type-2 VMM daemon: owns /dev/kvm, serves the control plane over UDS."

[lib]
name = "vmm_daemon"
path = "src/lib.rs"

[[bin]]
name = "vmm-daemon"
path = "src/main.rs"

[[bin]]
name = "boot-kernel"
path = "src/bin/boot_kernel.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
nix.workspace = true

vmm-hypervisor.workspace = true
vmm-devices.workspace = true
vmm-boot.workspace = true
